# roz

./: README.md  dune-project  roz.opam
.claude/: CLAUDE.md
.claude/skills/: roz.md
.claude/skills/roz/: SKILL.md
dune.lock/: lock.dune  matrix.dev.pkg  mosaic.dev.pkg  toffee.dev.pkg
lib/: cli.ml  cmd_info.ml  cmd_issue.ml  cmd_pr.ml  cmd_skill.ml  cmd_watch.ml  cmd_week.ml  config.ml  detect.ml  dune  error.ml  forge.ml  gitea_api.ml  github_api.ml  http.ml  tui_select.ml  types.ml
